--- a/README
+++ b/README
@@ -6,6 +6,7 @@ Zahlreiche verschiedene Animationen für eine RGB-PWM-LED-Matrix der größe 32 
 Folgende Animationen sind verfügbar:
 
     Defender Clone                              Frank BArtels
+    Game of Life                                Benny Baumann
     String-Animation                            Benny Baumann, Frank BArtels, et al.
     Leuchtturm                                  Sven Jonetat
     Pacman                                      Adrian
