fix: Typo in README file

--- a/README
+++ b/README
@@ -6,12 +6,12 @@ Zahlreiche verschiedene Animationen für eine RGB-PWM-LED-Matrix der größe 32 
 Folgende Animationen sind verfügbar:
 
     Game of Life                                Benny Baumann
-    String-Animation                            Benny Baumann, Frank BArtels, et al.
+    String-Animation                            Benny Baumann, Frank Bartels, et al.
     Leuchtturm                                  Sven Jonetat
     Pacman                                      Adrian
     Forest Fire                                 Frank Bartels, Idee via Rosetta Code
     Matrix Code                                 Adrian
-    Sich bewegendes Herz                        Frnk BArtels
+    Sich bewegendes Herz                        Frank Bartels
 
 Eine großes Dankeschön geht an:
 
