add: Information on missing animations

--- a/README
+++ b/README
@@ -12,6 +12,8 @@ Folgende Animationen sind verfügbar:
     Forest Fire                 CC-BY-SA-NC     Benny Baumann, Idee via Rosetta Code
     Matrix Code                                 Adrian
     Sich bewegendes Herz        CC-BY-SA-NC     Benny Baumann
+    Progress Bars               CC-BY-SA-NC     Benny Baumann
+    Lagerfeuer                  CC-BY-SA-NC     Benny Baumann
 
 Eine großes Dankeschön geht an:
 
